# study_gtest1

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  add.cpp
test/: CMakeLists.txt  test_add.cpp
